Some prep towards releasing

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "README"
+title: "POV"
 author: "Aditya Kothari"
 date: "19/09/2020"
 output: md_document
@@ -9,6 +9,16 @@ This library makes 3D geometry easy so that you can easily build 3D plots using
 ggplot. The below is a set of plots built using ggplot with the underlying
 data processed using this library and stitched together into a GIF to emphasise
 the 3D-ness.
+
+The functions are a little low level so you may need some programming comfort to
+use it at this point. The code in the README.Rmd file should give you some ideas 
+on how to use it. The source code is disgusting so go into it at your own peril.
+Some day it will be clean.
+
+Bug reports are welcome! Feature requests are also welcome but this is a side
+project for me so they will be worked on at a lower priority and at author's 
+discretion.
+
 
 ```{r Preview, cache=FALSE, echo=FALSE, warning=FALSE, message=FALSE, fig.width = 15, fig.height = 8, results = 'asis'}
 
@@ -843,4 +853,19 @@ cat('<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Sneak peek into a 
 
 ```
 
-These are just more complicated datasets but at the heart of it is the same approach as described above. The library has some helper functions to draw 3D paths, etc.
+This was generated using `geom_pitch` from my other library, CodaBonito ( available her github.com/thecomeonman/CodaBonito. )
+Here's a simple example to demonstrate usage. Play around with the arguments to get a feel for how it works.
+
+```{r CodaBonito1, cache=FALSE, echo=FALSE, warning=FALSE, message=FALSE, fig.width = 15, fig.height = 8, results = 'asis'}
+
+library(CodaBonito)
+
+p1 = ggplot() + 
+   geom_pitch(
+      mOriginCoordinates = cbind(-100, 0, 50),
+      mScreenCoordinates = cbind(60, 0, 0)
+   )
+
+print(p1)
+
+```
